use_undefined_identifier/c0/setup_epd_line
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/setup_epd_line/src/epd.c:497:14: error: use of undeclared identifier 'setup_epd_line_rankoffsets'
rankoffset = setup_epd_line_rankoffsets[0]; 
             ^
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/setup_epd_line/src/epd.c:628:14: error: use of undeclared identifier 'setup_epd_line_rankoffsets'
rankoffset = setup_epd_line_rankoffsets[++rankp]; 
             ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/setup_epd_line/src/obj/epd.o] Error 1
